Agentforce/force-app/main/default/objects/NPS_Response__c/NPS_Response__c.object-meta.xml
<CustomObject>
    <description>AD-180 - Represents a question from the NPS and what the response was</description>
    <label>NPS Response</label>
    <nameField>
        <label>NPS Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>