Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>AD-180 - Stores the answer to this question</description>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>