Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Do_our_staff_demonstrate_company_values__c.field-meta.xml
<CustomField>
    <fullName>Do_our_staff_demonstrate_company_values__c</fullName>
    <label>Do our staff show good work ethic?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>