Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Generate_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Generate_Action_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Define whether or not we need to generate an action plan if this response doesn&apos;t meet it&apos;s score threshold</description>
    <label>Generate Action Plan?</label>
    <type>Checkbox</type>
</CustomField>