Agentforce/force-app/main/default/objects/NPS_Response__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>AD-180 - Track the NPS that this response is for</description>
    <label>NPS</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>NPS Responses</relationshipLabel>
    <relationshipName>NPS_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>