Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>AD-180 - Store the order in which this question will be displayed in the NPS screen flow</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>