Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Overall_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Comments__c</fullName>
    <label>Overall Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>