Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>AD-376 - Store picklist of NPS Questions</description>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractual Delivery?</fullName>
            </value>
            <value>
                <fullName>How open &amp; honest is our relationship?</fullName>
            </value>
            <value>
                <fullName>How readily available are we to meet you?</fullName>
            </value>
            <value>
                <fullName>Dealing with serious issues?</fullName>
            </value>
            <value>
                <fullName>How innovative and creative are we?</fullName>
            </value>
            <value>
                <fullName>Do our colleagues show good work ethic?</fullName>
            </value>
            <value>
                <fullName>Do we provide accurate information?</fullName>
            </value>
            <value>
                <fullName>Do we look for future opportunities?</fullName>
            </value>
            <value>
                <fullName>Do we support your business needs?</fullName>
            </value>
            <value>
                <fullName>How do we compare to our competitors?</fullName>
            </value>
            <value>
                <fullName>How well do we represent value for money?</fullName>
            </value>
            <value>
                <fullName>How well do you rate our website?</fullName>
            </value>
            <value>
                <fullName>Are we improving?</fullName>
            </value>
            <value>
                <fullName>Further Comments/Easier to work with?</fullName>
            </value>
            <value>
                <fullName>Would you recommend us?</fullName>
            </value>
            <value>
                <fullName>Any questions that we should have asked?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>