Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <description>AD-376 - Stores the unique ID for the question</description>
    <label>Question ID</label>
    <length>2</length>
    <type>Text</type>
</CustomField>