Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>AD-180 - Store the question that this NPS Response is referring to</description>
    <label>Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>