Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>AD-180 - Tracks the score for this NPS response.</description>
    <label>Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>