Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Score_Required__c.field-meta.xml
<CustomField>
    <fullName>Score_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Used to track if we need to ask for the score on this question or not</description>
    <label>Score Required?</label>
    <type>Checkbox</type>
</CustomField>