Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Score_Threshold__c</fullName>
    <description>AD-180 - Define the score threshold for this response. Used to define if we need to generate an Action Plan or not</description>
    <label>Score Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>