Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Suggestion_for_improvement__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_for_improvement__c</fullName>
    <description>AD-180 - Tracks the suggestion for improvement against a Survey Response. Note that this may not be applicable for all questions</description>
    <label>Suggestion For Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>