Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Suggestion_for_Improvement_Required__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_for_Improvement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Used to track whether we need to ask for any suggestions for improvement or not</description>
    <label>Suggestion for Improvement Required?</label>
    <type>Checkbox</type>
</CustomField>