Agentforce/force-app/main/default/objects/NPS_Response__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <description>Trigger for firing Flows</description>
    <label>Trigger</label>
    <length>5</length>
    <type>Text</type>
</CustomField>