Agentforce/force-app/main/default/objects/NPS_Response__c/validationRules/Closed_NPS_Edit_Not_Allowed_By_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_NPS_Edit_Not_Allowed_By_User</fullName>
    <active>true</active>
    <description>Only Admins/the NPS Surveyor may make edits to the Response record when the NPS has been closed.</description>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				 ISPICKVAL(NPS__r.Status__c, &quot;Closed&quot;),
				 $User.Id !=  NPS__r.NPS_Surveyor__c,
					$Permission.System_Administrator = FALSE,
     $Permission.Regional_Delegated_Administrator = FALSE,
     $Permission.Delegated_Admin = FALSE,
     $Permission.Country_Delegated_Administrator = FALSE							
				)</errorConditionFormula>
    <errorMessage>Only the NPS Surveyor or an Administrator can edit NPS Responses for Closed NPS Surveys.</errorMessage>
</ValidationRule>