Agentforce/force-app/main/default/objects/NPS_Response__c/validationRules/Validate_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Score</fullName>
    <active>true</active>
    <description>AD-180 - Ensure that the provided score is between 0-10</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
OR(Score__c &gt; 10,  
Score__c &lt; 0))</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>The provided score must be between 0-10</errorMessage>
</ValidationRule>